--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,37 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/stylesheets/librairies/bootstrap.min.css"
+    />
+
+    <!-- Google Fonts-->
+    <link
+      href="%PUBLIC_URL%/stylesheets/librairies/google-fonts.css"
+      rel="stylesheet"
+    />
+
+    <!-- Animate.css -->
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/stylesheets/librairies/animate.min.css"
+    />
+
+    <!-- Normalize.css -->
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/stylesheets/librairies/normalize.css"
+    />
+
+    <!-- Custom CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="%PUBLIC_URL%/stylesheets/styles.css"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
